--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кэт энерджи</title>
+  <title>Подбор программы</title>
 </head>
 
 <body class="page__body">
@@ -24,13 +24,13 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--current">
+          <li class="site-list__item ">
             <a>Главная</a>
           </li>
           <li class="site-list__item">
             <a href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--current">
             <a href="form.html">Подбор программы</a>
           </li>
         </ul>
@@ -38,107 +38,140 @@
     </nav>
   </header>
 
-  <main class="main-container">
-    <section class="search-form">
-      <div class="search-form__wrapper">
-        <h1 class="search-form__title">
-          Функциональное питание для котов
-        </h1>
-        <p class="search-form__slogan">
-          Занялся собой? Займись котом!
-        </p>
-        <a class="search-form__button button" href="form.html">подобрать программу</a>
-      </div>
-    </section>
+  <main class="main-form">
+    <h1 class="form__title">Подбор программы</h1>
+    <p class="form__descripton">
+      Заполните анкету, и мы подберем программу питания для вашего кота
+    </p>
+    <form class="form__program-selection" action="https://echo.htmlacademy.ru/" method="post">
+      <fieldset class="form-group">
+        <legend class="visually-hidden">Кошачьи данные</legend>
+        <div class="form__item">
+          <label class="form__item-name" for="form-name">Имя:*</label>
+          <div class="form__item-wrapper">
+            <input class="form__item-text" type="text" name="form-name" id="form-name" placeholder="Барсик" required>
+          </div>
+        </div>
+        <div class="form__item">
+          <label class="form__item-name" for="form-weight">Вес (кг):*</label>
+          <div class="form__item-wrapper">
+            <input class="form__item-text" type="number" name="form-weight" id="form-weight" placeholder="7" required>
+          </div>
+        </div>
+        <div class="form__item">
+          <label class="form__item-name" for="form-age">Возраст (лет):</label>
+          <div class="form__item-wrapper">
+            <input class="form__item-text" type="number" name="form-age" id="form-age" placeholder="7">
+          </div>
+        </div>
+      </fieldset>
 
-    <section class="programs">
-      <div class="programs__wrapper">
-        <h2 class="visually-hidden">Виды программ для котов</h2>
-        <ul class="programs__list">
-          <li class="programs__item programs__item--weight-loss">
-            <h3 class="programs__title">Похудение</h2>
-              <p class="programs__description">
-                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
-                Slim поможет вашему питомцу сбросить лишний вес.
-              </p>
-              <a class="programs__link" href="#">каталог slim</a>
+      <fieldset class="form__group program-type">
+        <legend class="visually-hidden">Выбор программы</legend>
+        <ul class="program-type__list">
+          <li class="program-type__item">
+            <label class="program-type__control">
+              <input class="program-type__control-input" type="radio" name="program" checked>
+              <span class="program-type__control-mark-radio"></span>
+              <span class="program-type__control-label">Похудение</span>
+            </label>
           </li>
-          <li class="programs__item programs__item--weight-gain">
-            <h3 class="programs__title">Набор массы</h2>
-              <p class="programs__description">
-                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
-                нарастить необходимые мышцы!
-              </p>
-              <a class="programs__link" href="#">каталог pro</a>
+          <li class="program-type__item">
+            <label class="program-type__control">
+              <input class="program-type__control-input" type="radio" name="program">
+              <span class="program-type__control-mark-radio"></span>
+              <span class="program-type__control-label">Набор массы</span>
+            </label>
+          </li>
+          <li class="program-type__item">
+            <label class="program-type__control">
+              <input class="program-type__control-input" type="radio" name="program">
+              <span class="program-type__control-mark-radio"></span>
+              <span class="program-type__control-label">Не знаю (Нужен ваш совет)</span>
+            </label>
           </li>
         </ul>
-      </div>
-    </section>
+      </fieldset>
 
-    <section class="features">
-      <h2 class="features__title"> Как это работает </h2>
-      <ul class="features__list">
-        <li class="features__item features__item--food">
-          <p class="features__description">
-            Функциональное питание содержит только полезные питательные вещества.
-          </p>
-        </li>
-        <li class="features__item features__item--cook">
-          <p class="features__description">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </p>
-        </li>
-        <li class="features__item features__item--eat">
-          <p class="features__description">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </p>
-        </li>
-        <li class="features__item features__item--result">
-          <p class="features__description">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section class="example">
-      <h2 class="example__title"> Живой пример </h2>
-      <p class="example__description">
-        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок!
-        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-      </p>
-      <dl class="example__stats stats-list">
-        <div class="stats-list__item">
-          <dt class="stats-list__number">5 кг</dt>
-          <dd class="stats-list__description">Снижение веса</dd>
-        </div>
-        <div class="stats-list__item">
-          <dt class="stats-list__number">60 дней</dt>
-          <dd class="stats-list__description">Затрачено времени</dd>
-        </div>
-      </dl>
-      <p class="example__costs-amount">Затраты на питание: 15 000 РУБ. </p>
-
-      <div class="example__range">
-        <div class="example__before"> <img src="img/cat-example-before.jpg" alt="">
-          <div class="example__after">
-            <img src="img/cat-example-after.jpg" alt="">
-          </div>
-        </div>
-        <div class="example__range-scale range-scale">
-          <div class="range-scale__bar">
-            <button class="range-scale__toggle toggle-before" type="button">
-              Было
-            </button>
-            <input type="range">
-            <button class="range-scale__toggle toggle-after" type="button">
-              Стало
+      <fieldset class="form__group form-contact">
+        <legend class="form-contact__title">Контактные данные (владельца кота)</legend>
+        <div class="form-contact__item">
+          <label class="form-contact__item-name" for="">E-mail:*</label>
+          <div class="form-contact__item-wrapper item-wrapper">
+            <input class="" type="email" placeholder="kuklachev@gmail.com" required>
+            <button class="" type="button">
+              <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke="#222" stroke-width="1.3"
+                  d="M.65 5.848v8M17.65 5.848v8M0 13.198h18M0 1.198h18M17.35 3.03 9 9.524.65 3.03V1.498h16.7V3.03Z" />
+              </svg>
             </button>
           </div>
         </div>
-      </div>
-    </section>
+        <div class="form-contact__item">
+          <label class="form-contact__item-name" for="">Телефон:*</label>
+          <div class="form-contact__item-wrapper item-wrapper">
+            <input type="tel" placeholder="8 (960) 900-60-90" required>
+            <button class="" type="button">
+              <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#a)" fill="#000">
+                  <path
+                    d="M17.9 9.753H9.4v1.204h8.5l-2.1 2.107.9.903 3.1-3.11a.754.754 0 0 0 0-.904l-3.1-3.11-.9.903 2.1 2.007ZM8.1 19.787v-6.221a.653.653 0 0 0-.6-.602H3.1a1.226 1.226 0 0 0 1.2 1.204h2.5v5.017H3.1a1.784 1.784 0 0 1-1.728-1.02 1.801 1.801 0 0 1-.172-.686V3.431a1.78 1.78 0 0 1 .483-1.25A1.767 1.767 0 0 1 2.9 1.624h3.9v5.017H4.4a1.218 1.218 0 0 0-1.2 1.204h4.4a.649.649 0 0 0 .6-.602V.923A.863.863 0 0 0 7.5.32H3.1a2.99 2.99 0 0 0-2.151.81A3.01 3.01 0 0 0 0 3.23v13.948a2.91 2.91 0 0 0 .772 2.192 2.89 2.89 0 0 0 2.128.919h4.6a.499.499 0 0 0 .6-.502Z" />
+                </g>
+                <defs>
+                  <clipPath id="a">
+                    <path fill="#fff" transform="translate(0 .32)" d="M0 0h20v20.069H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </fieldset>
+
+      <fieldset class="form__group form-comment">
+        <legend class="form-comment__title">Комментарий</legend>
+        <textarea class="form-comment__message" name="comment-message" id="comment-message" cols="35" rows="10"
+          placeholder="Расскажите обо всех повадках кота"></textarea>
+      </fieldset>
+
+      <fieldset class="form__group form-additionally">
+        <legend class="form-additionally__title">Дополнительно</legend>
+        <ul class="form-additionally__list">
+          <li class="form-additionally__item">
+            <label class="form-additionally__control">
+              <input class="form-additionally__control-input" type="checkbox" name="additional-request" checked>
+              <span class="form-additionally__control-mark-checkbox"></span>
+              <span class="form-additionally__control-label">Сахарозаменитель</span>
+            </label>
+          </li>
+          <li class="form-additionally__item">
+            <label class="form-additionally__control">
+              <input class="form-additionally__control-input" type="checkbox" name="additional-request">
+              <span class="form-additionally__control-mark-checkbox"></span>
+              <span class="form-additionally__control-label">Питьевая вода</span>
+            </label>
+          </li>
+          <li class="form-additionally__item">
+            <label class="form-additionally__control">
+              <input class="form-additionally__control-input" type="checkbox" name="additional-request">
+              <span class="form-additionally__control-mark-checkbox"></span>
+              <span class="form-additionally__control-label">Молоко</span>
+            </label>
+          </li>
+          <li class="form-additionally__item">
+            <label class="form-additionally__control">
+              <input class="form-additionally__control-input" type="checkbox" name="additional-request">
+              <span class="form-additionally__control-mark-checkbox"></span>
+              <span class="form-additionally__control-label">Витамины</span>
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <button class="form__button button" type="submit">Отправить заявку</button>
+
+      <p class="form__required-fields-text">* — Обязательные поля</p>
+    </form>
 
     <section class="cooperation">
       <div class="cooperation__wrapper">
@@ -210,7 +243,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
