--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -7,10 +7,10 @@
   <title>Каталог продукции</title>
 </head>
 
-<body class="">
+<body class="page__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+      <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
     </a>
     <a class="main-header__logo-secondary">
       <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
@@ -58,7 +58,7 @@
               <span class="card__product-price">700 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -78,7 +78,7 @@
               <span class="card__product-price">1000 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -98,7 +98,7 @@
               <span class="card__product-price">700 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -118,7 +118,7 @@
               <span class="card__product-price">1000 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -138,7 +138,7 @@
               <span class="card__product-price">400 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -158,7 +158,7 @@
               <span class="card__product-price">700 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card">
@@ -178,14 +178,14 @@
               <span class="card__product-price">500 Р.</span>
             </p>
           </div>
-          <button class="card__button button" type="submit">Заказать</button>
+          <button class="card__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__item card card-show-more">
           <img src="img/show-more.svg" width="30" height="30" alt="Показать больше товаров">
           <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
           <p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
-          <button class="card-show-more__button button" type="submit">показать все</button>
+          <button class="card-show-more__button button" type="button">показать все</button>
         </li>
       </ul>
     </section>
@@ -199,7 +199,7 @@
             <p class="extra-goods-item__description">1 упаковка (100 г)</p>
             <p class="extra-goods-item__price">200 Р.</p>
           </div>
-          <button class="extra-goods-item__button button" type="submit">Заказать</button>
+          <button class="extra-goods-item__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__extra-goods-item extra-goods-item">
@@ -208,7 +208,7 @@
             <p class="extra-goods-item__description">5 литров</p>
             <p class="extra-goods-item__price">50 Р.</p>
           </div>
-          <button class="extra-goods-item__button button" type="submit">Заказать</button>
+          <button class="extra-goods-item__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__extra-goods-item extra-goods-item">
@@ -217,7 +217,7 @@
             <p class="extra-goods-item__description">1 литр</p>
             <p class="extra-goods-item__price">100 Р.</p>
           </div>
-          <button class="extra-goods-item__button button" type="submit">Заказать</button>
+          <button class="extra-goods-item__button button" type="button">Заказать</button>
         </li>
 
         <li class="catalog__extra-goods-item extra-goods-item">
@@ -226,7 +226,7 @@
             <p class="extra-goods-item__description">1 упаковка (30 г)</p>
             <p class="extra-goods-item__price">300 Р.</p>
           </div>
-          <button class="extra-goods-item__button button" type="submit">Заказать</button>
+          <button class="extra-goods-item__button button" type="button">Заказать</button>
         </li>
       </ul>
 
