--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+      <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
     </a>
     <a class="main-header__logo-secondary">
       <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
@@ -22,19 +22,17 @@
           Открыть меню
         </span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--current">
-            <a>Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--current">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Подбор программы</a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -56,20 +54,20 @@
         <h2 class="visually-hidden">Виды программ для котов</h2>
         <ul class="programs__list">
           <li class="programs__item programs__item--weight-loss">
-            <h3 class="programs__title">Похудение</h2>
-              <p class="programs__description">
-                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
-                Slim поможет вашему питомцу сбросить лишний вес.
-              </p>
-              <a class="programs__link" href="#">каталог slim</a>
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
+              Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="programs__link" href="#">каталог slim</a>
           </li>
           <li class="programs__item programs__item--weight-gain">
-            <h3 class="programs__title">Набор массы</h2>
-              <p class="programs__description">
-                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
-                нарастить необходимые мышцы!
-              </p>
-              <a class="programs__link" href="#">каталог pro</a>
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту
+              нарастить необходимые мышцы!
+            </p>
+            <a class="programs__link" href="#">каталог pro</a>
           </li>
         </ul>
       </div>
