--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,10 +25,10 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item ">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="site-list__item site-list__item--current">
-            <a href="catalog.html">Каталог продукции</a>
+            <a>Каталог продукции</a>
           </li>
           <li class="site-list__item ">
             <a href="form.html">Подбор программы</a>
