--- a/source/index.html
+++ b/source/index.html
@@ -26,8 +26,9 @@
             <span class="visually-hidden">
               Открыть меню
             </span>
+            <img src="img/logo-burger.svg" width="24" height="18" alt="">
           </button>
-          <ul class="main-nav__list site-list">
+          <ul class="main-nav__list site-list visually-hidden">
             <li class="site-list__item site-list__item--current">
               <a>Главная</a>
             </li>
@@ -46,15 +47,14 @@
       <div class="container-content">
 
         <section class="search-form">
-          <div class="search-form__wrapper">
             <h1 class="search-form__title">
               Функциональное питание для котов
             </h1>
-            <p class="search-form__slogan">
+            <p class="search-form__subtitle">
               Занялся собой? Займись котом!
             </p>
+            <img src="img/index-can-mobile.png" width="280" height="270" alt="Банка кошачьей еды">
             <a class="search-form__button button" href="form.html">подобрать программу</a>
-          </div>
         </section>
 
         <section class="programs">
