--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body class="page__body">
-
   <header class="main-header">
     <div class="main-header__wrapper container-content">
       <a class="main-header__logo" href="index.html">
@@ -27,7 +26,7 @@
           </span>
           <img src="img/logo-burger.svg" width="24" height="18" alt="">
         </button>
-        <ul class="main-nav__list site-list visually-hidden">
+        <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--current">
             <a>Главная</a>
           </li>
@@ -152,8 +151,8 @@
         <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
         <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
-      <div class="cooperation__map">
-        <img src="img/location.jpg" width="320" height="362" alt="Расположение магазина на карте">
+      <div class="cooperation__map-wrapper">
+        <img class="cooperation__map" src="img/location.jpg" width="320" height="362" alt="Расположение магазина на карте">
       </div>
     </section>
   </main>
@@ -207,7 +206,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
