--- a/source/form.html
+++ b/source/form.html
@@ -97,10 +97,10 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name" for="email">E-mail:*</label>
             <div class="form-contact__item-wrapper item-wrapper">
-              <input class="form-contact__email" type="email" placeholder="kuklachev@gmail.com" name="email" id="email"
+              <input class="form-contact__input-detail" type="email" placeholder="kuklachev@gmail.com" name="email" id="email"
                 required>
 
-              <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="form-contact__email-logo" width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke="#222" stroke-width="1.3"
                   d="M.65 5.848v8M17.65 5.848v8M0 13.198h18M0 1.198h18M17.35 3.03 9 9.524.65 3.03V1.498h16.7V3.03Z" />
               </svg>
@@ -110,10 +110,10 @@
           <div class="form-contact__item">
             <label class="form-contact__item-name" for="phone">Телефон:*</label>
             <div class="form-contact__item-wrapper item-wrapper">
-              <input class="form-contact__phone" type="tel" placeholder="8 (960) 900-60-90" name="phone" id="phone"
+              <input class="form-contact__input-detail" type="tel" placeholder="8 (960) 900-60-90" name="phone" id="phone"
                 required>
 
-              <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="form-contact__phone-logo" width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#a)" fill="#000">
                   <path
                     d="M17.9 9.753H9.4v1.204h8.5l-2.1 2.107.9.903 3.1-3.11a.754.754 0 0 0 0-.904l-3.1-3.11-.9.903 2.1 2.007ZM8.1 19.787v-6.221a.653.653 0 0 0-.6-.602H3.1a1.226 1.226 0 0 0 1.2 1.204h2.5v5.017H3.1a1.784 1.784 0 0 1-1.728-1.02 1.801 1.801 0 0 1-.172-.686V3.431a1.78 1.78 0 0 1 .483-1.25A1.767 1.767 0 0 1 2.9 1.624h3.9v5.017H4.4a1.218 1.218 0 0 0-1.2 1.204h4.4a.649.649 0 0 0 .6-.602V.923A.863.863 0 0 0 7.5.32H3.1a2.99 2.99 0 0 0-2.151.81A3.01 3.01 0 0 0 0 3.23v13.948a2.91 2.91 0 0 0 .772 2.192 2.89 2.89 0 0 0 2.128.919h4.6a.499.499 0 0 0 .6-.502Z" />
@@ -167,11 +167,11 @@
               </label>
             </li>
           </ul>
+
+          <button class="form__button button" type="submit">Отправить заявку</button>
+
+          <p class="form__required-fields-text">* — Обязательные поля</p>
         </fieldset>
-
-        <button class="form__button button" type="submit">Отправить заявку</button>
-
-        <p class="form__required-fields-text">* — Обязательные поля</p>
       </form>
     </section>
 
