начало создания адаптивной сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,24 +25,22 @@
           </span>
           <img src="img/logo-burger.svg" width="24" height="18" alt="">
         </button>
-        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item ">
-              <a href="index.html">Главная</a>
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item site-list__item--current">
-              <a>Каталог продукции</a>
+              <a class="site-list__link">Каталог продукции</a>
             </li>
             <li class="site-list__item ">
-              <a href="form.html">Подбор программы</a>
+              <a class="site-list__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
-        </div>
       </nav>
     </div>
   </header>
 
-  <main class="main-catalog">
+  <main class="main">
     <section class="catalog">
       <div class="catalog-wrapper container-content">
         <h1 class="catalog__title section-title">Каталог продукции</h1>
