--- a/source/form.html
+++ b/source/form.html
@@ -25,24 +25,22 @@
           </span>
           <img src="img/logo-burger.svg" width="24" height="18" alt="">
         </button>
-        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item ">
-              <a href="index.html">Главная</a>
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item site-list__item--current">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item ">
-              <a>Подбор программы</a>
+              <a class="site-list__link">Подбор программы</a>
             </li>
           </ul>
-        </div>
       </nav>
     </div>
   </header>
 
-  <main class="main-form">
+  <main class="main">
     <section class="form container-content">
       <h1 class="form__title">Подбор программы</h1>
       <p class="form__descripton">
