--- a/source/index.html
+++ b/source/index.html
@@ -18,30 +18,31 @@
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
           alt="Кэт энерджи">
       </a>
-
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">
-            Открыть меню
-          </span>
-          <img src="img/logo-burger.svg" width="24" height="18" alt="">
-        </button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--current">
-            <a>Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="main-nav-wrapper">
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">
+              Открыть меню
+            </span>
+            <img src="img/logo-burger.svg" width="24" height="18" alt="">
+          </button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--current">
+              <a class="site-list__link">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
-  <main class="main-index">
+  <main class="main">
     <section class="search-form">
       <div class="search-form__container container-content">
         <h1 class="search-form__title section-title">
@@ -50,7 +51,7 @@
         <p class="search-form__subtitle">
           Занялся собой? Займись котом!
         </p>
-        <img src="img/index-can-mobile.png" width="280" height="270" alt="Банка кошачьей еды">
+        <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270" alt="Банка кошачьей еды">
         <a class="search-form__button button" href="form.html">подобрать программу</a>
       </div>
     </section>
