начало стилизации каталога для мобильной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,7 +45,6 @@
       <div class="catalog-wrapper container-content">
         <h1 class="catalog__title section-title">Каталог продукции</h1>
         <ul class="catalog__list">
-
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
@@ -201,10 +200,12 @@
           </li>
 
           <li class="catalog__item card card-show-more">
-            <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
-              alt="Показать больше товаров">
-            <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
-            <p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
+            <div class="card__content-wrapper">
+              <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
+                alt="Показать больше товаров">
+              <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
+              <p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
+            </div>
             <button class="card-show-more__button button button--gray" type="button">показать все</button>
           </li>
         </ul>
