--- a/source/index.html
+++ b/source/index.html
@@ -150,7 +150,7 @@
     <section class="cooperation">
       <div class="cooperation__wrapper container-content">
         <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
-        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span> </p>
       </div>
       <div class="cooperation__map-wrapper">
         <img class="cooperation__map" src="img/location.jpg" width="320" height="362" alt="Расположение магазина на карте">
