продолжение стилизации каталога для планшета

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -200,7 +200,7 @@
           </li>
 
           <li class="catalog__item card card-show-more">
-            <div class="card__content-wrapper">
+            <div class="card__info-wrapper">
               <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
                 alt="Показать больше товаров">
               <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
@@ -217,10 +217,12 @@
         <h2 class="extra-goods__title">Дополнительные товары</h2>
         <ul class="extra-goods__list">
           <li class="extra-goods__item extra-goods-item">
-            <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
-            <p class="extra-goods-item__description">1 упаковка (100 г)
-              <span class="extra-goods-item__value">200 Р.</span>
-            </p>
+            <div class="extra-goods-item__content-wrapper">
+              <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
+              <p class="extra-goods-item__description">1 упаковка (100 г)
+                <span class="extra-goods-item__value">200 Р.</span>
+              </p>
+            </div>
             <button class="extra-goods-item__button button" type="button">Заказать</button>
           </li>
 
