--- a/source/index.html
+++ b/source/index.html
@@ -119,11 +119,11 @@
         <dl class="example__stats stats-list">
           <div class="stats-list__item">
             <dt class="stats-list__number">5 кг</dt>
-            <dd class="stats-list__description">Снижение веса</dd>
+            <dd class="stats-list__description">снижение <br> веса</dd>
           </div>
           <div class="stats-list__item">
             <dt class="stats-list__number">60 дней</dt>
-            <dd class="stats-list__description">Затрачено времени</dd>
+            <dd class="stats-list__description">затрачено <br> времени</dd>
           </div>
         </dl>
         <p class="example__costs-amount">Затраты на питание: 15 000 РУБ. </p>
