--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
 
   <main class="main">
     <section class="form container-content">
-      <h1 class="form__title">Подбор программы</h1>
+      <h1 class="form__title section-title">Подбор программы</h1>
       <p class="form__descripton">
         Заполните анкету, и мы подберем программу питания для вашего кота
       </p>
