--- a/source/index.html
+++ b/source/index.html
@@ -110,24 +110,27 @@
 
     <section class="example">
       <div class="example__wrapper container-content">
-        <h2 class="example__title section-title"> Живой пример </h2>
-        <p class="example__description">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <dl class="example__stats stats-list">
-          <div class="stats-list__item">
-            <dt class="stats-list__number">5 кг</dt>
-            <dd class="stats-list__description">снижение <br> веса</dd>
+        <div class="example__content-wrapper">
+          <h2 class="example__title section-title"> Живой пример </h2>
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок!
+            При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="example__stats-wrapper">
+            <dl class="example__stats stats-list">
+              <div class="stats-list__item">
+                <dt class="stats-list__number">5 кг</dt>
+                <dd class="stats-list__description">снижение веса</dd>
+              </div>
+              <div class="stats-list__item">
+                <dt class="stats-list__number">60 дней</dt>
+                <dd class="stats-list__description">затрачено времени</dd>
+              </div>
+            </dl>
+            <p class="example__costs">Затраты на питание: <span class="example__amount">15 000 РУБ.</span>  </p>
           </div>
-          <div class="stats-list__item">
-            <dt class="stats-list__number">60 дней</dt>
-            <dd class="stats-list__description">затрачено <br> времени</dd>
-          </div>
-        </dl>
-        <p class="example__costs-amount">Затраты на питание: 15 000 РУБ. </p>
-
+        </div>
         <div class="example__range">
           <img src="img/cat-example-before.jpg" width="280" height="232" alt="толстый кот">
           <img src="img/cat-example-after.jpg" width="243" height="232" alt="худой кот">
