начало стилизации страницы формы для планшета1

--- a/source/form.html
+++ b/source/form.html
@@ -49,17 +49,17 @@
       <form class="form__program-selection" action="https://echo.htmlacademy.ru/" method="post">
         <fieldset class="form__group details">
           <legend class="visually-hidden">Кошачьи данные</legend>
-          <div class="form__item">
-            <label class="form__item-name" for="form-name">Имя:*</label>
-            <input class="form__item-text" type="text" name="form-name" id="form-name" placeholder="Барсик" required>
+          <div class="details__item">
+            <label class="details__item-name" for="details-name">Имя:*</label>
+            <input class="details__item-text" type="text" name="details-name" id="form-name" placeholder="Барсик" required>
           </div>
-          <div class="form__item">
-            <label class="form__item-name" for="form-weight">Вес (кг):*</label>
-            <input class="form__item-text" type="number" name="form-weight" id="form-weight" placeholder="7" required>
+          <div class="details__item">
+            <label class="details__item-name" for="details-weight">Вес (кг):*</label>
+            <input class="details__item-text" type="number" name="details-weight" id="details-weight" placeholder="7" required>
           </div>
-          <div class="form__item">
-            <label class="form__item-name" for="form-age">Возраст (лет):</label>
-            <input class="form__item-text" type="number" name="form-age" id="form-age" placeholder="7">
+          <div class="details__item">
+            <label class="details__item-name" for="details-age">Возраст (лет):</label>
+            <input class="details__item-text" type="number" name="details-age" id="details-age" placeholder="7">
           </div>
         </fieldset>
 
