--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
   <main class="main">
     <section class="search-form">
       <div class="search-form__container container-content">
-        <h1 class="search-form__title section-title">
+        <h1 class="search-form__title page-title">
           Функциональное питание для котов
         </h1>
         <p class="search-form__subtitle">
@@ -82,7 +82,7 @@
 
     <section class="features ">
       <div class="features__wrapper container-content">
-        <h2 class="features__title section-title"> Как это работает </h2>
+        <h2 class="features__title page-title"> Как это работает </h2>
         <ul class="features__list">
           <li class="features__item features__item--food">
             <p class="features__description">
@@ -111,7 +111,7 @@
     <section class="example">
       <div class="example__wrapper container-content">
         <div class="example__content-wrapper">
-          <h2 class="example__title section-title"> Живой пример </h2>
+          <h2 class="example__title page-title"> Живой пример </h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
             Отличный результат без изнуряющих тренировок!
@@ -152,7 +152,7 @@
 
     <section class="cooperation">
       <div class="cooperation__wrapper container-content">
-        <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
+        <h2 class="cooperation__title">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
         <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span> </p>
       </div>
       <div class="cooperation__map-wrapper">
