--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
   <main class="main">
     <section class="catalog">
       <div class="catalog-wrapper container-content">
-        <h1 class="catalog__title section-title">Каталог продукции</h1>
+        <h1 class="catalog__title page-title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item card">
             <div class="card__content-wrapper">
@@ -212,60 +212,58 @@
       </div>
     </section>
 
-    <section class="extra-goods">
-      <div class="extra-goods__wrapper container-content">
-        <h2 class="extra-goods__title">Дополнительные товары</h2>
-        <ul class="extra-goods__list">
-          <li class="extra-goods__item extra-goods-item">
-            <div class="extra-goods-item__content-wrapper">
-              <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
-              <p class="extra-goods-item__description">1 упаковка (100 г)
-                <span class="extra-goods-item__value">200 Р.</span>
-              </p>
+      <section class="extra-goods">
+        <div class="extra-goods__wrapper container-content">
+          <h2 class="extra-goods__title section-title">Дополнительные товары</h2>
+          <div class="extra-goods__content-wrapper">
+            <ul class="extra-goods__list">
+              <li class="extra-goods__item extra-goods-item">
+                <div class="extra-goods-item__content-wrapper">
+                  <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
+                  <p class="extra-goods-item__description">1 упаковка (100 г)
+                    <span class="extra-goods-item__value">200 Р.</span>
+                  </p>
+                </div>
+                <button class="extra-goods-item__button button" type="button">Заказать</button>
+              </li>
+
+              <li class="extra-goods__item extra-goods-item">
+                <h3 class="extra-goods-item__title">Питьевая вода</h3>
+                <p class="extra-goods-item__description">5 литров
+                  <span class="extra-goods-item__value">50 Р.</span>
+                </p>
+                <button class="extra-goods-item__button button" type="button">Заказать</button>
+              </li>
+
+              <li class="extra-goods__item extra-goods-item">
+                <h3 class="extra-goods-item__title">Молоко</h3>
+                <p class="extra-goods-item__description">1 литр
+                  <span class="extra-goods-item__value">100 Р.</span>
+                </p>
+                <button class="extra-goods-item__button button" type="button">Заказать</button>
+              </li>
+
+              <li class="extra-goods__item extra-goods-item">
+                <h3 class="extra-goods-item__title">Витамины</h3>
+                <p class="extra-goods-item__description">1 упаковка (30 г)
+                  <span class="extra-goods-item__value">300 Р.</span>
+                </p>
+                <button class="extra-goods-item__button button" type="button">Заказать</button>
+              </li>
+            </ul>
+            <div class="special-offer">
+              <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
+                alt="Логотип подарка">
+              <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
             </div>
-            <button class="extra-goods-item__button button" type="button">Заказать</button>
-          </li>
-
-          <li class="catalog__extra-goods-item extra-goods-item">
-            <h3 class="extra-goods-item__title">Питьевая вода</h3>
-            <p class="extra-goods-item__description">5 литров
-              <span class="extra-goods-item__value">50 Р.</span>
-            </p>
-            <button class="extra-goods-item__button button" type="button">Заказать</button>
-          </li>
-
-          <li class="catalog__extra-goods-item extra-goods-item">
-            <h3 class="extra-goods-item__title">Молоко</h3>
-            <p class="extra-goods-item__description">1 литр
-              <span class="extra-goods-item__value">100 Р.</span>
-            </p>
-            <button class="extra-goods-item__button button" type="button">Заказать</button>
-          </li>
-
-          <li class="catalog__extra-goods-item extra-goods-item">
-            <h3 class="extra-goods-item__title">Витамины</h3>
-            <p class="extra-goods-item__description">1 упаковка (30 г)
-              <span class="extra-goods-item__value">300 Р.</span>
-            </p>
-            <button class="extra-goods-item__button button" type="button">Заказать</button>
-          </li>
-        </ul>
-    </section>
-
-    <section class="special-offer container-content">
-      <div class="special-offer__content-wrapper">
-        <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
-          alt="Логотип подарка">
-        <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
-      </div>
-    </section>
-
-
+          </div>
+        </div>
+      </section>
 
     <section class="cooperation cooperation--gray">
       <div class="cooperation__wrapper container-content">
-        <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
-        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <h2 class="cooperation__title">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+        <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span></p>
       </div>
       <div class="cooperation__map-wrapper">
         <img class="cooperation__map" src="img/location.jpg" width="320" height="362"
