стилизация десктопной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -228,26 +228,32 @@
               </li>
 
               <li class="extra-goods__item extra-goods-item">
+                <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Питьевая вода</h3>
                 <p class="extra-goods-item__description">5 литров
                   <span class="extra-goods-item__value">50 Р.</span>
                 </p>
+              </div>
                 <button class="extra-goods-item__button button" type="button">Заказать</button>
               </li>
 
               <li class="extra-goods__item extra-goods-item">
+                <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Молоко</h3>
                 <p class="extra-goods-item__description">1 литр
                   <span class="extra-goods-item__value">100 Р.</span>
                 </p>
+              </div>
                 <button class="extra-goods-item__button button" type="button">Заказать</button>
               </li>
 
               <li class="extra-goods__item extra-goods-item">
+                <div class="extra-goods-item__content-wrapper">
                 <h3 class="extra-goods-item__title">Витамины</h3>
                 <p class="extra-goods-item__description">1 упаковка (30 г)
                   <span class="extra-goods-item__value">300 Р.</span>
                 </p>
+              </div>
                 <button class="extra-goods-item__button button" type="button">Заказать</button>
               </li>
             </ul>
