--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
     <section class="search-form">
       <div class="search-form__container container-content">
         <h1 class="search-form__title page-title">
-          Функциональное питание для котов
+          Функциональное <br> питание для котов
         </h1>
         <p class="search-form__subtitle">
           Занялся собой? Займись котом!
