начало выполнения 5 задания

--- a/source/form.html
+++ b/source/form.html
@@ -69,21 +69,21 @@
             <ul class="program-type__list">
               <li class="program-type__item">
                 <label class="program-type__control">
-                  <input class="program-type__control-input" type="radio" name="program" checked>
+                  <input class="program-type__control-input visually-hidden" type="radio" name="program" checked>
                   <span class="program-type__control-mark-radio"></span>
                   <span class="program-type__control-label">Похудение</span>
                 </label>
               </li>
               <li class="program-type__item">
                 <label class="program-type__control">
-                  <input class="program-type__control-input" type="radio" name="program">
+                  <input class="program-type__control-input visually-hidden" type="radio" name="program">
                   <span class="program-type__control-mark-radio"></span>
                   <span class="program-type__control-label">Набор массы</span>
                 </label>
               </li>
               <li class="program-type__item">
                 <label class="program-type__control">
-                  <input class="program-type__control-input" type="radio" name="program">
+                  <input class="program-type__control-input visually-hidden" type="radio" name="program">
                   <span class="program-type__control-mark-radio"></span>
                   <span class="program-type__control-label">Не знаю (Нужен ваш совет)</span>
                 </label>
@@ -139,29 +139,29 @@
           <ul class="form-additionally__list">
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input" type="checkbox" name="additional-request" checked>
-
+                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request" checked>
+                <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Сахарозаменитель</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input" type="checkbox" name="additional-request">
-
+                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Питьевая вода</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input" type="checkbox" name="additional-request">
-
+                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Молоко</span>
               </label>
             </li>
             <li class="form-additionally__item">
               <label class="form-additionally__control">
-                <input class="form-additionally__control-input" type="checkbox" name="additional-request">
-
+                <input class="form-additionally__control-input visually-hidden" type="checkbox" name="additional-request">
+                <span class="form-additionally__control-mark-checkbox"></span>
                 <span class="form-additionally__control-label">Витамины</span>
               </label>
             </li>
