--- a/source/index.html
+++ b/source/index.html
@@ -114,8 +114,8 @@
     </section>
 
     <section class="example">
-      <div class="example__wrapper container-content">
-        <div class="example__content-wrapper">
+      <div class="example__wrapper">
+        <div class="example__content-wrapper container-content">
           <h2 class="example__title page-title"> Живой пример </h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
@@ -136,19 +136,22 @@
             <p class="example__costs">Затраты на питание: <span class="example__amount">15 000 РУБ.</span> </p>
           </div>
         </div>
-        <div class="example__range">
-          <img src="img/cat-example-before.jpg" width="280" height="232" alt="толстый кот">
-          <img src="img/cat-example-after.jpg" width="243" height="232" alt="худой кот">
+        <div class="example__range-slider-wrapper">
+          <div class="example__range-slider">
+            <div class="example__image-wrapper image-cat-before">
+              <img class="example__image " src="img/cat-example-before@1x.jpg" width="280" height="256" alt="толстый кот">
+            </div>
 
-          <div class="example__range-scale range-scale">
-            <div class="range-scale__bar">
-              <button class="range-scale__toggle toggle-before" type="button">
-                Было
-              </button>
-              <input type="range">
-              <button class="range-scale__toggle toggle-after" type="button">
-                Стало
-              </button>
+            <div class="example__image-wrapper image-cat-after">
+              <img class="example__image " src="img/cat-example-after@1x.jpg" width="280" height="256" alt="худой кот">
+            </div>
+
+            <div class="example__range-scale-bar">
+              <div class="example__range-scale-circle">
+                <span class="example__range-scale-button">
+                  <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 0 0 9l8 9V0ZM24 9l-8-9v18l8-9Z" fill="#666"/></svg>
+                </span>
+              </div>
             </div>
           </div>
         </div>
