стилизация мобильного меню с JS

--- a/source/form.html
+++ b/source/form.html
@@ -18,12 +18,11 @@
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
           alt="Кэт энерджи">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">
             Открыть меню
           </span>
-          <img src="img/logo-burger.svg" width="24" height="18" alt="">
         </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item ">
@@ -250,6 +249,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="script.js"></script>
+
 </body>
 
 </html>
