--- a/source/index.html
+++ b/source/index.html
@@ -18,27 +18,27 @@
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
           alt="Кэт энерджи">
       </a>
-      <div class="main-nav-wrapper">
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--opened main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">
               Открыть меню
             </span>
-            <img src="img/logo-burger.svg" width="24" height="18" alt="">
           </button>
-          <ul class="main-nav__list site-list site-list--white">
-            <li class="site-list__item site-list__item--current site-list__item-white">
-              <a class="site-list__link site-list__link--white">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--white" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--white" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
+          <div class="main-nav-wrapper">
+            <ul class="main-nav__list site-list site-list--white">
+              <li class="site-list__item site-list__item--current site-list__item-white">
+                <a class="site-list__link site-list__link--white">Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link site-list__link--white" href="catalog.html">Каталог продукции</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link site-list__link--white" href="form.html">Подбор программы</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-      </div>
+
     </div>
   </header>
 
@@ -232,6 +232,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="script.js"></script>
+
 </body>
 
 </html>
