--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
     <div class="main-header__wrapper container-content">
       <a class="main-header__logo" href="index.html">
         <picture>
-          <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
           <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
             alt="Логотип Кэт энерджи">
@@ -52,8 +52,12 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-small-chicken.png" width="68" height="86"
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-small-chicken-desktop.png" width="161" height="172">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-chicken-tablet.png" width="161" height="172">
+                  <img class="card__image" src="img/catalog-card-small-chicken.png" width="68" height="78"
                   alt="Кошачья еда со вкусом курицы, 500 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 500 г</h2>
@@ -74,8 +78,12 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-big-chicken.png" width="84" height="101"
-                  alt="Кошачья еда со вкусом курицы, 1000 грамм">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-chicken-desktop.png" width="172" height="202">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-chicken-tablet.png" width="168" height="206">
+                  <img class="card__image" src="img/catalog-card-big-chicken.png" width="84" height="101"
+                    alt="Кошачья еда со вкусом курицы, 1000 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
@@ -96,8 +104,11 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="86"
-                  alt="Кошачья еда со вкусом рыбы, 500 грамм">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-fish-tablet.png" width="163" height="174">
+                  <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="78"
+                    alt="Кошачья еда со вкусом рыбы, 500 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 500 г</h2>
@@ -118,8 +129,12 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-big-fish.png" width="84" height="101"
-                  alt="Кошачья еда со вкусом рыбы, 1000 грамм">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-fish-desktop.png" width="172" height="196">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-fish-tablet.png" width="168" height="200">
+                  <img class="card__image" src="img/catalog-card-big-fish.png" width="84" height="101"
+                    alt="Кошачья еда со вкусом рыбы, 1000 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
@@ -140,8 +155,11 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="86"
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-buckwheat-tablet.png" width="161" height="171">
+                <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="78"
                   alt="Кошачья еда со вкусом гречки, 500 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 500 г</h2>
@@ -162,8 +180,12 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-buckwheat-desktop.png" width="172" height="196">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-buckwheat-tablet.png" width="168" height="200">
                 <img class="card__image" src="img/catalog-card-big-buckwheat.png" width="84" height="101"
                   alt="Кошачья еда со вкусом гречки, 1000 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 1000 г</h2>
@@ -184,8 +206,11 @@
           <li class="catalog__item card">
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
-                <img class="card__image" src="img/catalog-card-small-rice.png" width="68" height="86"
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-rice-tablet.png" width="163" height="174">
+                <img class="card__image" src="img/catalog-card-small-rice.png" width="72" height="84"
                   alt="Кошачья еда со вкусом риса, 500 грамм">
+                </picture>
               </div>
               <div class="card__info-wrapper">
                 <h2 class="card__title">Cat Energy slim 500 г</h2>
