оптимизация растровой графики

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,8 @@
     <div class="main-header__wrapper container-content">
       <a class="main-header__logo" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
           <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38"
             alt="Логотип Кэт энерджи">
         </picture>
@@ -53,8 +53,8 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/catalog-card-small-chicken-desktop.png">
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-chicken-tablet.png">
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-small-chicken-desktop.png" width="161" height="172">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-chicken-tablet.png" width="161" height="172">
                   <img class="card__image" src="img/catalog-card-small-chicken.png" width="68" height="78"
                   alt="Кошачья еда со вкусом курицы, 500 грамм">
                 </picture>
@@ -79,8 +79,8 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-chicken-desktop.png">
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-chicken-tablet.png">
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-chicken-desktop.png" width="172" height="202">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-chicken-tablet.png" width="168" height="206">
                   <img class="card__image" src="img/catalog-card-big-chicken.png" width="84" height="101"
                     alt="Кошачья еда со вкусом курицы, 1000 грамм">
                 </picture>
@@ -105,7 +105,7 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-fish-tablet.png">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-fish-tablet.png" width="163" height="174">
                   <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="78"
                     alt="Кошачья еда со вкусом рыбы, 500 грамм">
                 </picture>
@@ -130,8 +130,8 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-fish-desktop.png">
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-fish-tablet.png">
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-fish-desktop.png" width="172" height="196">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-fish-tablet.png" width="168" height="200">
                   <img class="card__image" src="img/catalog-card-big-fish.png" width="84" height="101"
                     alt="Кошачья еда со вкусом рыбы, 1000 грамм">
                 </picture>
@@ -156,7 +156,7 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-buckwheat-tablet.png">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-buckwheat-tablet.png" width="161" height="171">
                 <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="78"
                   alt="Кошачья еда со вкусом гречки, 500 грамм">
                 </picture>
@@ -181,8 +181,8 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-buckwheat-desktop.png">
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-buckwheat-tablet.png">
+                  <source media="(min-width: 1440px)" srcset="img/catalog-card-big-buckwheat-desktop.png" width="172" height="196">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-big-buckwheat-tablet.png" width="168" height="200">
                 <img class="card__image" src="img/catalog-card-big-buckwheat.png" width="84" height="101"
                   alt="Кошачья еда со вкусом гречки, 1000 грамм">
                 </picture>
@@ -207,7 +207,7 @@
             <div class="card__content-wrapper">
               <div class="card__image-wrapper">
                 <picture>
-                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-rice-tablet.png">
+                  <source media="(min-width: 768px)" srcset="img/catalog-card-small-rice-tablet.png" width="163" height="174">
                 <img class="card__image" src="img/catalog-card-small-rice.png" width="72" height="84"
                   alt="Кошачья еда со вкусом риса, 500 грамм">
                 </picture>
