--- a/source/index.html
+++ b/source/index.html
@@ -60,6 +60,9 @@
           Занялся собой? Займись котом!
         </p>
         <picture>
+          <source type="image/webp" media="(min-width: 1440px)" srcset="img/index-can-desktop.webp 1x, img/index-can-desktop@2x.webp 2x" width="552" height="499">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x" width="709" height="609">
+          <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x" src="img/index-can-mobile.png" width="280" height="270">
           <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x" width="552" height="499">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x" width="709" height="609">
           <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270" srcset="img/index-can-mobile@2x.png 2x"
@@ -153,6 +156,8 @@
           <div class="example__range-slider">
             <div class="example__image-wrapper image-cat-before">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/cat-example-before-tablet.webp 1x, img/cat-example-before-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/cat-example-before-mobile.webp 1x, img/cat-example-before-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/cat-example-before-tablet.png 1x, img/cat-example-before-tablet@2x.png 2x">
                 <img class="example__image example__image--before" src="img/cat-example-before-mobile.png" width="280"
                   height="256" srcset="img/cat-example-before-mobile@2x.png 2x" alt="толстый кот">
@@ -161,6 +166,8 @@
 
             <div class="example__image-wrapper image-cat-after">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/cat-example-after-tablet.webp 1x, img/cat-example-after-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/cat-example-after-mobile.webp 1x, img/cat-example-after-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)" srcset="img/cat-example-after-tablet.png 1x, img/cat-example-after-tablet@2x.png 2x">
                 <img class="example__image example__image--after" src="img/cat-example-after-mobile.png" width="280"
                   height="256" srcset="img/cat-example-after-mobile@2x.png 2x" alt="худой кот">
